# inspector

./: .gitignore  404.html  Dockerfile  Dockerfile.fastapi  Dockerfile.mkdocs  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  nginx.conf  objects.inv  pyproject.toml
analisar/: index.html
app/: index.html
apps/: app.py  app_py_pdf_inspector.py  app_risks.py  app_upload_files.py  app_with_security.py  app_write_report.py  public_contest_app.py
chave/: index.html
controller/: ct_ecgu.py  ct_log.py  ct_prompts.py  ct_rag.py  ct_response.py  ct_upload.py  folders.py  prompts.py  py_pdf_inspector.py  work_key.py
controller/ct_log/: index.html
controller/ct_prompts/: index.html
controller/ct_rag/: index.html
controller/ct_response/: index.html
controller/folders/: index.html
controller/prompts/: index.html
controller/public_contest/: index.html
controller/work_key/: index.html
data/: info.txt
docs/: analisar.md  app.md  chave.md  documentos.md  index.md  password.md  pastas.md  processar_llm.md
docs/controller/: ct_log.md  ct_prompts.md  ct_rag.md  ct_response.md  ct_upload.md  folders.md  (+3 more)
documentos/: index.html
inspector/: PyPDFInspector.py  analisar.py  app.py  chat_report.py  chave.py  documentos.py  folders.py  password.py  pastas.py  pdf_inspector.py  processar_llm.py  prompts.py  py_pdf_inspector.py  risks.py  write_report.py
model/: chats.py  config_schema.py  embedding.py  rag.py  split_text.py  tika.py  vector_redis.py
modules/: achados.py  etp.py  medical.py  recomendacao.py  supervisao.py  tr.py  trilhas_pessoal.py
password/: index.html
pastas/: index.html
processar_llm/: index.html
search/: search_index.json
site/: objects.inv
tests/: test_chat_audit_report.py  test_split_text.py
view/: app.py  app_py_pdf_inspector.py  app_upload_files.py  app_with_security.py  password.py  public_contest_app.py
(+66 files in other folders)
