[tool.poetry]
name = "inspector"
version = "0.1.0"
description = "O"
authors = ["andrecorumba"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.25.0"
streamlit-option-menu = "^0.3.6"
langchain = "^0.0.247"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pypdf = "^3.13.0"
tiktoken = "^0.4.0"
chromadb = "^0.4.3"
watchdog = "^3.0.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.21"
mkdocstrings-python = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
