[tool.poetry]
name = "inspector"
version = "0.2.0"
description = ""
authors = ["André Rocha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
openai = "^1.54.4"
numpy = "^2.1.3"
langchain-text-splitters = "^0.3.2"
pytest = "^8.3.3"
tiktoken = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
